--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL='mysql://duqb39awogubu2lqvr28:pscale_pw_4ZyYnMt5E8Q778nO4lZtgODZ8rHA3FuCfSsnu6uuJH8@aws.connect.psdb.cloud/ghostverse?sslaccept=strict'
+DATABASE_URL='mysql://irg7lip8l9behr0fnuuv:pscale_pw_RV0kaSDBl1xYNH2Hr2udqsHETjbG8T3zIltH4xYr5WU@aws.connect.psdb.cloud/ghostverse?sslaccept=strict'
 GOOGLE_CLIENT_ID=1032498093342-eanipqcragn4c097n648l31u0rhdd296.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=mysecret
